--- a/generators/app/templates/floats.preamble.en.tex
+++ b/generators/app/templates/floats.preamble.en.tex
@@ -13,8 +13,9 @@
 %--> use predecessor float
 \usepackage{float}
 
-%%% Doc: No Documentation
-%\usepackage{flafter}          % Floats immer erst nach der Referenz setzen
+% EN: See http://www.tex.ac.uk/cgi-bin/texfaq2html?label=floats
+% DE: floats IMMER nach einer Referenzierung platzieren
+%\usepackage{flafter}
 
 % Defines a \FloatBarrier command, beyond which floats may not
 % pass; useful, for example, to ensure all floats for a section
@@ -66,4 +67,5 @@
 % Alternatives Paket: rotating Allerdings wird hier nur das Bild gedreht, während bei lscape auch die PDF-Seite gedreht wird.
 %Das Paket lscape dreht die Seite auch nicht
 \usepackage{pdflscape}
+
 <% } -%>
