Use {} at \input

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -336,7 +336,7 @@
 % Trouble shooting outlined at https://tex.stackexchange.com/a/100618/9075
 %
 % According to https://tex.stackexchange.com/q/451235/9075 this is the way to go
-\input glyphtounicode
+\input{glyphtounicode}
 \pdfgentounicode=1
 <% if (latexcompiler == "both") { -%>
 \fi
