--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -839,7 +839,7 @@ Finally, a conclusion is drawn and outlook on future work is made (\cref{sec:out
 <%= heading1 %>{Related Work}
 \label{sec:relatedwork}
 
-Winery~\cite{Winery} is a graphical \textcomment{modeling}{modeling with one ``l'', because of AE} tool.
+Winery~\cite{Winery} is a graphical \textcomment{modeling}{modeling with one ``l'', because of American English} tool.
 The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } else { %>Binz et al.~\cite<% } %>{Binz2009}.
 <% } -%>
 <% if (examples) { -%>
