Fix some spelling mistakes

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -171,7 +171,7 @@ pdflatex
 <% switch (font) { case "arial": -%>
 <%# Arial and pdflatex -%>
 <%# -%>
-% Headings are typset in Helvetica (which is similar to Arial)
+% Headings are typeset in Helvetica (which is similar to Arial)
 \usepackage[scaled=.95]{helvet}
 <% break; case "times": -%>
 <%# Times New Roman and pdflatex -%>
@@ -233,7 +233,7 @@ In addition, we make the code appear more nice -%>
 %    qt=false%
 %]{cfr-lm}
 
-% EN: Headings are typset in Helvetica (which is similar to Arial)
+% EN: Headings are typeset in Helvetica (which is similar to Arial)
 % DE: Schriftart fuer die Ueberschriften - ueberschreibt lmodern
 %\usepackage[scaled=.95]{helvet}
 
