--- a/generators/app/templates/math.preamble.en.tex
+++ b/generators/app/templates/math.preamble.en.tex
@@ -27,9 +27,9 @@
 %%% Doc: http://www.ctan.org/info?id=fixmath
 % LaTeX's default style of typesetting mathematics does not comply
 % with the International Standards ISO31-0:1992 to ISO31-13:1992
-% which indicate that uppercase Greek letters always be typset
+% which indicate that uppercase Greek letters always be typeset
 % upright, as opposed to italic (even though they usually
-% represent variables) and allow for typsetting of variables in a
+% represent variables) and allow for typesetting of variables in a
 % boldface italic style (even though the required fonts are
 % available). This package ensures that uppercase Greek be typeset
 % in italic style, that upright $\Delta$ and $\Omega$ symbols are
