--- a/generators/app/templates/otherfeatures.example.en.tex
+++ b/generators/app/templates/otherfeatures.example.en.tex
@@ -13,5 +13,5 @@ $\powerset({1,2,3})$
 <%- bexample %>
 Brackets work as designed:
 <test>
-One can also input backquotes in verbatim text: \verb|`test`|.
+One can also input backticks in verbatim text: \verb|`test`|.
 <%- eexample %>
