--- a/generators/app/templates/paralist.example.en.tex
+++ b/generators/app/templates/paralist.example.en.tex
@@ -40,7 +40,7 @@ With the package paralist, one can create enumerations with lesser spacing:
 <%- eexample %>
 <% } -%>
 
-With paralist, one can even have all items typset after each other and have them clean in the tex document:
+With paralist, one can even have all items typeset after each other and have them clean in the TeX document:
 
 <%- bexample %>
 \begin{inparaenum}
