--- a/generators/app/templates/hyphenation.example.en.tex
+++ b/generators/app/templates/hyphenation.example.en.tex
@@ -1,7 +1,7 @@
 <%= heading2 %>{Hyphenation}
 
 \LaTeX{} automatically hyphenates words.
-When using microtype, there should be less hypnetations than in other settings.
+When using \href{https://ctan.org/pkg/microtype}{microtype}, there should be fewer hyphenations than in other settings.
 It might be necessary to tweak the hyphenations nevertheless.
 Here are some hints:
 
@@ -11,7 +11,7 @@ You can also write \verb1applica\allowbreak{}tion-specific1 (result: applica\all
 
 <% if (tweakouterquote == "outerquote")  { -%>
 In the net, you will read about that one can use a normal quote sign followed by an equal sign (\verb1"=1) to specify that hyphenation is allowed at other places in the word.
-Since we use the quote sign for automatic quoation, this is not possible anymore.
+Since we use the quote sign for automatic quotation, this is not possible anymore.
 Please use the command \verb1\hydash1 for the same purpose.
 Example: \verb1application\hydash specific1 (result: application\hydash specific).
 <% } else { -%>
