--- a/generators/app/templates/siunitx.example.en.tex
+++ b/generators/app/templates/siunitx.example.en.tex
@@ -1,7 +1,7 @@
 <%= heading2 %>{Typesetting Units}
 
 <%- bexample %>
-Numbers can be written plain text (such as 100), by using the siunitx package as follows:
+Numbers can be written plain text (such as 100), by using the \href{https://ctan.org/pkg/siunitx}{siunitx} package as follows:
 \SI{100}{\km\per\hour},
 or by using plain \LaTeX{} (and math mode):
 $100 \frac{\mathit{km}}{h}$.
