--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -160,6 +160,11 @@
 <% } -%>
 <%- include('diagbox.preamble.en.tex', this); -%>
 
+<% if (reallatexcompiler == "lualatex") { -%>
+\usepackage{spelling}
+\spellingoutput{off}
+
+<% } -%>
 <% if (documentclass == 'ustutt') { -%>
 %% Index
 \usepackage{makeidx}		% Index
