--- a/generators/app/templates/thesis-additions.en.tex
+++ b/generators/app/templates/thesis-additions.en.tex
@@ -14,14 +14,14 @@
 \setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
 \setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
 
-<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { -%>
-<% if (latexcompiler == "both") { -%>
-\ifluatex\else
+<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { indent = '' -%>
+<% if (latexcompiler == "both") { indent = '  ' -%>
+\ifpdftex
 <% } -%>
-% Align page sizes
-% Seems to be required somehow
-\setlength{\pdfpageheight}{\paperheight}
-\setlength{\pdfpagewidth}{\paperwidth}
+<%= indent %>% Align page sizes
+<%= indent %>% Seems to be required somehow
+<%= indent %>\setlength{\pdfpageheight}{\paperheight}
+<%= indent %>\setlength{\pdfpagewidth}{\paperwidth}
 <% if (latexcompiler == "both") { -%>
 \fi
 <% } -%>
