--- a/generators/app/templates/floats.example.en.tex
+++ b/generators/app/templates/floats.example.en.tex
@@ -6,7 +6,10 @@
 \begin{figure}
   \centering
   \includegraphics[width=.8\linewidth]{example-image-golden}
-  \caption[Simple Figure]{Simple Figure. Based on <% if (available.citet) { %>\citet<% } else { %>Scharrer~\cite<% } %>{mwe}.}
+  \caption[Simple Figure]{
+    Simple Figure.
+    Based on <% if (available.citet) { %>\citet<% } else { %>Scharrer~\cite<% } %>{mwe}.
+  }
   \label{fig:label}
 \end{figure}
 <%- eexample %>
