Add forgotten setting of indent

--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -168,6 +168,7 @@ lualatex
 pdflatex
 ###########################################################################
 -%>
+<% if (latexcompiler == "both") { indent = '  ' } -%>
 <% switch (font) { case "arial": -%>
 <%# Arial and pdflatex -%>
 <%# -%>
