--- a/generators/app/templates/font.preamble.en.tex
+++ b/generators/app/templates/font.preamble.en.tex
@@ -168,7 +168,7 @@ lualatex
 pdflatex
 ###########################################################################
 -%>
-<% if (latexcompiler == "both") { indent = '  ' } -%>
+<% if (latexcompiler == "both") { indent = '  ' } else { indent = '' } -%>
 <% switch (font) { case "arial": -%>
 <%# Arial and pdflatex -%>
 <%# -%>
