Try to fix indent

--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -1032,21 +1032,21 @@ The whole idea of TOSCA is explained by <% if (available.citet) { %>\citet<% } e
     left=8mm,
     title=Zugehöriger \LaTeX{}-Quelltext aus \texttt{\currfilepath},
 <% if (listings == 'listings') { -%>
-    listing options={%
-      frame=none,
-      language={[LaTeX]TeX},
-      escapeinside={},
-      firstline=\the\LTGbeginlineexample,
-      lastline=\the\LTGendlineexample,
-      firstnumber=\the\LTGbeginlineexample,
-      basewidth=.5em,
-      aboveskip=0mm,
-      belowskip=0mm,
-      numbers=left,
-      xleftmargin=0mm,
-      numberstyle=\tiny,
-      numbersep=8pt%
-    }
+    listing options={
+        frame=none,
+        language={[LaTeX]TeX},
+        escapeinside={},
+        firstline=\the\LTGbeginlineexample,
+        lastline=\the\LTGendlineexample,
+        firstnumber=\the\LTGbeginlineexample,
+        basewidth=.5em,
+        aboveskip=0mm,
+        belowskip=0mm,
+        numbers=left,
+        xleftmargin=0mm,
+        numberstyle=\tiny,
+        numbersep=8pt%
+      }
 <% } else { -%>
     minted language=TeX,
     minted style=vs,
