--- a/generators/app/templates/main.en.tex
+++ b/generators/app/templates/main.en.tex
@@ -1155,10 +1155,12 @@ Be specific in the sense that your arguments for future work should be based on 
 \lipsum[1-2]
 <% } -%>
 
-<% switch (documentclass) { case "lncs": -%>
+<%
+  indent = ''
+  switch (documentclass) { case "lncs": -%>
 \subsubsection*{Acknowledgments}
 
-<% break; case "acmart": -%>
+<% break; case "acmart": indent = '  ' -%>
 \begin{acks}
 <% break; case "ieee": -%>
 % regular IEEE prefers the singular form
@@ -1167,14 +1169,14 @@ Be specific in the sense that your arguments for future work should be based on 
 <% break; default: -%>
 <% break; } -%>
 <% if (isPaper) { -%>
-Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
+<%= indent%>Identification of funding sources and other support, and thanks to individuals and groups that assisted in the research and the preparation of the work should be included in an acknowledgment section, which is placed just before the reference section in your document \cite{acmart}.
 <% if (howtotext) { -%>
 
-The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
+<%= indent%>The hints on writing a paper/thesis are taken from Dirk Fahland's \href{https://github.com/dfahland/Master-or-Bachelor-thesis-Template-Eindhoven-University-of-Technology}{LaTeX template for Bachelor and Master theses at Eindhoven University of Technology}.
 <% } -%>
 <% if (documentclass == 'acmart') { -%>
 
-For more \LaTeX{} hints for ACM read on at \url{https://www.acm.org/publications/taps/latex-best-practices}.
+<%= indent%>For more \LaTeX{} hints for ACM read on at \url{https://www.acm.org/publications/taps/latex-best-practices}.
 \end{acks}
 <% } -%>
 <% } -%>
