--- a/generators/app/templates/paralist.example.en.tex
+++ b/generators/app/templates/paralist.example.en.tex
@@ -4,8 +4,8 @@ One can list items as follows:
 
 <%- bexample %>
 \begin{itemize}
-\item Item One
-\item Item Two
+  \item Item One
+  \item Item Two
 \end{itemize}
 <%- eexample %>
 
@@ -14,8 +14,8 @@ With the package paralist, one can create itemizations with lesser spacing:
 
 <%- bexample %>
 \begin{compactitem}
-\item Item One
-\item Item Two
+  \item Item One
+  \item Item Two
 \end{compactitem}
 <%- eexample %>
 <% } -%>
@@ -40,7 +40,7 @@ With the package paralist, one can create enumerations with lesser spacing:
 <%- eexample %>
 <% } -%>
 
-With paralist, one can even have all items typset after each other and have them clean in the tex document:
+With paralist, one can even have all items typeset after each other and have them clean in the TeX document:
 
 <%- bexample %>
 \begin{inparaenum}
