--- a/generators/app/templates/main.de.tex
+++ b/generators/app/templates/main.de.tex
@@ -333,7 +333,7 @@
 
 <%- include('scientific-thesis-cover.preamble.en.tex', this); %>
 <% break; } -%>
-<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { indent = '' -%>
+<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { indent = '' -%>
 
 <% if (latexcompiler == "both") { indent = '  ' -%>
 \ifpdftex
