--- a/generators/app/templates/thesis-additions.en.tex
+++ b/generators/app/templates/thesis-additions.en.tex
@@ -14,7 +14,7 @@
 \setcounter{secnumdepth}{3}    % Abbildungsnummerierung mit groesserer Tiefe
 \setcounter{tocdepth}{2}       % Inhaltsverzeichnis mit groesserer Tiefe
 
-<% if ((latexcompiler == "lualatex") || (latexcompiler == "both")) { indent = '' -%>
+<% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { indent = '' -%>
 <% if (latexcompiler == "both") { indent = '  ' -%>
 \ifpdftex
 <% } -%>
