--- a/generators/app/templates/footnotes.preamble.en.tex
+++ b/generators/app/templates/footnotes.preamble.en.tex
@@ -5,21 +5,20 @@
 %
 \usepackage[
    bottom,      % Footnotes appear always on bottom. This is necessary
-                % especially when floats are used
+                % Especially when floats are used
    stable,      % Make footnotes stable in section titles
    % perpage,     % Reset on each page
-   %para,       % Place footnotes side by side of in one paragraph.
-   %side,       % Place footnotes in the margin
+   % para,        % Place footnotes side by side of in one paragraph.
+   % side,        % Place footnotes in the margin
    ragged,      % Use RaggedRight
-   %norule,     % suppress rule above footnotes
-   multiple,    % rearrange multiple footnotes intelligent in the text.
-   %symbol,     % use symbols instead of numbers
+   %n orule,     % Suppress rule above footnotes
+   multiple,    % Rearrange multiple footnotes intelligent in the text.
+   % symbol,      % Use symbols instead of numbers
 ]{footmisc}
 
 \counterwithout{footnote}{chapter} % Continuous numbering of footnotes across chapters
 
-\interfootnotelinepenalty=10000 % Verhindert das Fortsetzen von
-                                % Fussnoten auf der gegenüberligenden Seite
+\interfootnotelinepenalty=10000 % Verhindert das Fortsetzen von Fussnoten auf der gegenüberligenden Seite
 
 <% } -%>
 % EN: Put footnotes below floats
