Fix indent and language

--- a/generators/app/templates/listings.preamble.de.tex
+++ b/generators/app/templates/listings.preamble.de.tex
@@ -91,11 +91,11 @@
   captionpos=b
 }
 <% if ((latexcompiler == "pdflatex") || (latexcompiler == "both")) { indent = '' -%>
+
 <% if (latexcompiler == "both") { indent = '  ' -%>
 \ifpdftex
 <% } -%>
-
-<%= indent %>% Ermögliche Umlaute when using \lstinputputlisting.
+<%= indent %>% Ermögliche Umlaute falls \lstinputputlisting genutzt wird
 <%= indent %>% Siehe https://stackoverflow.com/a/29260603/873282 für Details.
 <%= indent %>% listingsutf8 hat im Juni 2020 nicht funktioniert.
 <%= indent %>\lstset{literate=
