--- a/generators/app/templates/tables.preamble.de.tex
+++ b/generators/app/templates/tables.preamble.de.tex
@@ -12,7 +12,7 @@
 
 %%% Doc: http://mirror.ctan.org/tex-archive/macros/latex/contrib/supertabular/supertabular.pdf
 %\usepackage{supertabular}
-<% if (documentclass == 'ustutt') { %>
+<% if (documentclass == 'ustutt') { -%>
 
 %%% Neue Tabellen-Umgebungen:
 % ---------------------------
